package account

import "github.com/zhsyourai/teddy-backend/uaa/proto"

func validateRegisterReq(req *proto.RegisterReq) error {
	return nil
}

func validateGetByUsernameReq(req *proto.GetByUsernameReq) error {
	return nil
}

func validateDeleteByUsernameReq(req *proto.DeleteByUsernameReq) error {
	return nil
}

func validateVerifyPasswordReq(req *proto.VerifyPasswordReq) error {
	return nil
}

func validateChangePasswordReq(req *proto.ChangePasswordReq) error {
	return nil
}
